feat: link transactions to owned accounts
